--- a/app/Resources/views/usuario/index.html.twig
+++ b/app/Resources/views/usuario/index.html.twig
@@ -85,7 +85,7 @@
             "sLoadingRecords": "Cargando...",
             "oPaginate": {
                 "sFirst":    "Primero",
-                "sLast":     "Ãšltimo",
+                "sLast":     "Último",
                 "sNext":     "Siguiente",
                 "sPrevious": "Anterior"
             },
