--- a/app/Resources/views/tema/index.html.twig
+++ b/app/Resources/views/tema/index.html.twig
@@ -12,11 +12,6 @@
             </div>
         </div>
     </section>
-    <ul>
-        <li>
-            <a href="{{ path('tema_new') }}">Create a new entry</a>
-        </li>
-    </ul>
 {% endblock %}
 {% block stylesheets %}
     {{ parent() }}
@@ -27,43 +22,47 @@
     <script src="{{asset('bundles/app/plugins/dagre-d3/d3.v3.min.js')}}" charset="utf-8"></script>
     <script src="{{asset('bundles/app/plugins/dagre-d3/dagre-d3.js')}}" charset="utf-8"></script>
     <script type="text/javascript">
-    // Create the input graph
-    var g = new dagreD3.graphlib.Graph()
-      .setGraph({})
-      .setDefaultEdgeLabel(function() { return {}; });
+        // Create the input graph
+        var g = new dagreD3.graphlib.Graph()
+          .setGraph({})
+          .setDefaultEdgeLabel(function() { return {}; });
 
-    // Here we"re setting nodeclass, which is used by our custom drawNodes function
-    // below.
-    {% for tema in temas %}
-        g.setNode({{ tema.id }},  { labelType:"html", label: "<a href=\"{{ path('tema_show', { 'id': tema.id }) }}\">{{tema}}</a>", class: "type-TOP" });
-    {% endfor %}
-    
-    g.nodes().forEach(function(v) {
-      var node = g.node(v);
-      // Round the corners of the nodes
-      node.rx = node.ry = 5;
-    });
-
-    // Set up edges, no special attributes.
-    {% for tema in temas %}
-        {% for hijo in tema.hijos %}
-           g.setEdge({{tema.id}}, {{hijo.id}});
+        // Here we"re setting nodeclass, which is used by our custom drawNodes function
+        // below.
+        {% for tema in temas %}
+            g.setNode({{ tema.id }},  { labelType:"html", label: "<a href=\"{{ path('tema_show', { 'id': tema.id }) }}\">{{tema}}</a>", class: "type-TOP" });
         {% endfor %}
-    {% endfor %}
+        
+        g.nodes().forEach(function(v) {
+          var node = g.node(v);
+          // Round the corners of the nodes
+          node.rx = node.ry = 5;
+        });
 
-    // Create the renderer
-    var render = new dagreD3.render();
+        // Set up edges, no special attributes.
+        {% for tema in temas %}
+            {% for hijo in tema.hijos %}
+               g.setEdge({{tema.id}}, {{hijo.id}});
+            {% endfor %}
+        {% endfor %}
 
-    // Set up an SVG group so that we can translate the final graph.
-    var svg = d3.select("svg"),
-        svgGroup = svg.append("g");
+        // Create the renderer
+        var render = new dagreD3.render();
 
-    // Run the renderer. This is what draws the final graph.
-    render(d3.select("svg g"), g);
+        // Set up an SVG group so that we can translate the final graph.
+        var svg = d3.select("svg"),
+            svgGroup = svg.append("g");
 
-    // Center the graph
-    var xCenterOffset = (svg.attr("width") - g.graph().width) / 2;
-    svgGroup.attr("transform", "translate(" + xCenterOffset + ", 20)");
-    svg.attr("height", g.graph().height + 40);
-</script>
+        // Run the renderer. This is what draws the final graph.
+        render(d3.select("svg g"), g);
+
+        // Center the graph
+        var xCenterOffset = (svg.attr("width") - g.graph().width) / 2;
+        svgGroup.attr("transform", "translate(" + xCenterOffset + ", 20)");
+        svg.attr("height", g.graph().height + 40);
+    </script>
+    {% javascripts
+        '@AppBundle/Resources/public/angularjs/loadModule.js'%}
+        <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
 {% endblock %}
