--- a/app/Resources/views/expresionmatematica/new.html.twig
+++ b/app/Resources/views/expresionmatematica/new.html.twig
@@ -1,16 +1,48 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>ExpresionMatematica creation</h1>
-
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-    {{ form_end(form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('expresionmatematica_index') }}">Back to the list</a>
-        </li>
-    </ul>
+<div ng-controller="newExpresionController">
+    <section class="content-header">
+        <h1>Expresión&nbsp;<small class="label {% if edition is defined %}bg-yellow">Edición{% else %}bg-green">Nuevo{% endif %}</small></h1>
+    </section>
+    <section class="content">
+        <div class="box box-primary">
+            <!-- form start -->
+            {{ form_start(form) }}
+                <div class="box-body">
+                    {{ form_errors(form) }}
+                    {{ form_row(form.tema) }}
+                    {{ form_row(form.expresion) }}
+                </div>
+                <div class="box-footer">
+                    <a class="btn btn-danger btn-flat" href="{% if edition is defined %}{{ path('expresionmatematica_show', { 'id': edition }) }}{% else %}{{ path('expresionmatematica_index') }}{% endif %}"><i class="fa fa-arrow-left"></i>&nbsp;Cancelar</a>
+                    <button class="btn btn-primary btn-flat pull-right" type="submit" id="expresion_submit" name="expresion[submit]" ><i class='fa fa-save'></i>&nbsp;Guardar </button>
+                </div>
+            {{ form_row(form._token) }}
+            {{ form_end(form, {'render_rest': false}) }}
+        </div>
+    </section>
+</div>
+{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <!-- Select2 -->
+    <link rel="stylesheet" href="{{asset('bundles/app/plugins/select2/select2.min.css')}}">
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{asset('bundles/app/plugins/ckeditor/ckeditor.js')}}"></script>
+    <script src="{{ asset('bundles/app/plugins/select2/select2.full.min.js') }}"></script>
+    <script>
+        $(function () {
+            //Initialize Select2 Elements
+            $(".select2").select2();
+        });
+        var urlMath = "{{ asset('bundles/app/plugins/MathJax/MathJax.js?config=TeX-AMS_HTML') }}";
+    </script>
+    {% javascripts
+        '@AppBundle/Resources/public/angularjs/newExpresion/newExpresionModule.js'
+        '@AppBundle/Resources/public/angularjs/newExpresion/newExpresionController.js'%}
+        <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
 {% endblock %}
