--- a/app/Resources/views/expresionmatematica/show.html.twig
+++ b/app/Resources/views/expresionmatematica/show.html.twig
@@ -1,32 +1,39 @@
 {% extends 'base.html.twig' %}
-
 {% block body %}
-    <h1>ExpresionMatematica</h1>
+    <section class="content-header">
+        <h1>Expresión&nbsp;<small class="label bg-blue">{{expresionMatematica.id}}</small></h1>
+    </section>
+    <section class="content">
+        <div class="box box-primary">
+            <div class="box-body">
+                <div class="form-group">
+                    <label class="col-xs-12 col-md-2 control-label">Tema</label> 
+                    <div class="col-xs-12 col-md-10">
+                        <a href="{{ path('tema_show', { 'id': expresionMatematica.tema.id }) }}"><p class="form-control-static">{{ expresionMatematica.tema }}</p></a>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-xs-12 col-md-2 control-label">Enunciado</label> 
+                    <div class="col-xs-12 col-md-10">
+                        <p class="form-control-static">{{ expresionMatematica.expresion|raw }}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box-footer">
+                <a class="btn btn-default btn-flat" href="{{ path('expresionmatematica_index') }}"><i class="fa fa-arrow-left"></i>&nbsp;ir a lista</a>
+                <a class="btn btn-warning btn-flat pull-right" href="{{ path('expresionmatematica_edit', { 'id': expresionMatematica.id }) }}"><i class="fa fa-edit"></i>&nbsp;Editar</a>
+            </div>
+        </div>
+    </section>
+{% endblock %}
 
-    <table>
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ expresionMatematica.id }}</td>
-            </tr>
-            <tr>
-                <th>Expresion</th>
-                <td>{{ expresionMatematica.expresion }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('expresionmatematica_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('expresionmatematica_edit', { 'id': expresionMatematica.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+{% block javascripts %}
+    {{ parent() }}
+    
+    <script src="{{ asset('bundles/app/plugins/MathJax/MathJax.js?config=TeX-AMS_HTML') }}"></script>
+    
+    {% javascripts
+        '@AppBundle/Resources/public/angularjs/loadModule.js'%}
+        <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
 {% endblock %}
